# VTV-VMM-helpers

./: .gitignore  README.md  Taskfile.yml  justfile  pyproject.toml  pyproject2.toml  tox.ini
scripts/: update_database.py  weekly_schedule.py
src/: main.py
src/vtv_vmm_helpers/: __init__.py  database_updater.py  weekly_schedule.py
vtv_api_client/: vtv_api_client.py
