[tool.poetry]
name = "vtv-api-client"
version = "0.1.0"
description = ""
authors = ["Elladur <mail@patrickreiner.at>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pytz = "^2024.1"
pyperclip = "^1.8.2"
pandas = "^2.2.2"
sqlalchemy = "^2.0.30"
pymysql = "^1.1.1"



[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
black = "^24.4.2"
ruff = "^0.4.2"
types-pytz = "^2024.1.0.20240417"
types-requests = "^2.31.0.20240406"
pytest = "^8.2.0"
pytest-mock = "^3.14.0"
pandas-stubs = "^2.2.2.240514"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
[[tool.mypy.overrides]]
module = ["pyperclip"]
ignore_missing_imports = true
